# excelpic

./: .gitignore  README.md  pyproject.toml  setup.py
excelpic/: __init__.py  excelpic.py
