[tool.poetry]
name = "excelpic"
version = "0.1.0"
description = "Generate images from Excel files"
authors = ["Jacob Dwyer <jacobdwyer16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^306"
imgkit = "^1.2.3"
types-pywin32 = "^306.0.0.20240408"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
